# annotation-processing-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
annotation_processing_utils/cli/: cluster_submission.py  runners.py  tester.yaml
annotation_processing_utils/postprocess/: get_best.py  inference.py  metrics.py  mws.py  rusty_mws_processor.py
annotation_processing_utils/postprocessing/: get_best.py  inference.py  metrics.py  mws.py
annotation_processing_utils/process/: cylindrical_annotations.py  training_validation_test_roi_calculator.py
annotation_processing_utils/processing/: cylindrical_annotations.py  training_validation_test_roi_calculator.py
annotation_processing_utils/utils/: dacapo_util.py  parse_data_path.py  predict_with_write_size.py  write_mws_configs.py  zarr_util.py  zarr_write_select_channels.py
src/annotation_processing_utils/process/: cylindrical_annotations.py  roi_splitter.py  training_validation_test_roi_calculator.py
