[project]
name = "annotation-processing-utils"
version = "0.0.1"

requires-python = ">=3.8"
authors = [
  {name = "David Ackerman", email = "ackermand@janelia.hhmi.org"},
]
maintainers = [
  {name = "David Ackerman", email = "ackermand@janelia.hhmi.org"},
]
description = "Utils for processing neuroglancer annotations"
readme = "README.md"
license = {file = "LICENSE.txt"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["ignore"]

[project.scripts]
run-dacapo-train = "annotation_processing_utils.cli.runners:run_dacapo_train"
run-inference = "annotation_processing_utils.cli.runners:run_inference"
run-mws = "annotation_processing_utils.cli.runners:run_mws"
run-rusty-mws = "annotation_processing_utils.cli.runners:run_rusty_mws"
run-metrics = "annotation_processing_utils.cli.runners:run_metrics"
submit-inference = "annotation_processing_utils.cli.cluster_submission:submit_inference"
submit-mws = "annotation_processing_utils.cli.cluster_submission:submit_mws"
submit-rusty-mws = "annotation_processing_utils.cli.cluster_submission:submit_rusty_mws"
submit-metrics = "annotation_processing_utils.cli.cluster_submission:submit_metrics"
submit-dacapo-train = "annotation_processing_utils.cli.cluster_submission:submit_dacapo_train"